fix for menus behind slideshow

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 4. UWT styles
       CROSS-SITE STYLES TO OVERWRITE FOUNDATION STYLES
       MAIN NAV
+      ALL PAGES
       HOME PAGE
       LANDING PAGE
       DETAILS PAGE
@@ -5977,6 +5978,11 @@ div:active.smallemail {
 }
 /*--END MAIN NAV--*/
 
+
+/*--ALL PAGES--*/
+#content, #nav{ position: relative;}
+#content{ z-index:1;}
+#nav{ z-index:2;}
 
 /*--HOME PAGE--*/
 #utility {
